--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "expo-av": "~10.1.3",
     "expo-sharing": "^10.1.1",
     "expo-status-bar": "~1.1.0",
+    "expo-updates": "^0.14.5",
     "firebase": "^9.9.4",
     "react": "17.0.1",
     "react-dom": "17.0.1",
